fixed lemon input select height not respecting tailwind class, fixed web vitals breakdown style, removed survey form collapse style, performance card to use more contrasting text-success/error/warning classes, fixed default toast margin bottom

--- a/frontend/src/scenes/surveys/EditSurvey.scss
+++ b/frontend/src/scenes/surveys/EditSurvey.scss
@@ -2,12 +2,6 @@
     display: none;
 }
 
-.SurveyForm {
-    .LemonCollapsePanel__header {
-        background: var(--border-primary);
-    }
-}
-
 .question-choice-open-ended-footer {
     position: absolute;
     bottom: -5px;
